--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="navbar">
         <i class="fa-solid fa-dog"></i>
-        Dog's Lovers
+        Dogs Lovers
         <i class="fa-solid fa-heart"></i>
     </div>
     <p class="warning"><i class="fa-brands fa-creative-commons"></i> Wait few second it will takes some time to fetch
